package io.github.revNrun.revNrun.controllers.game;

public class GameController {
}
