package io.github.revNrun.revNrun.core;

public enum GameState {
    MAIN_MENU,
    GAME_PLAY
}
