package io.github.revNrun.revNrun.models.entities;

import io.github.revNrun.revNrun.core.CarCategory;

// TODO: Apply observer pattern to notify if the car breaks
public class Car {
    private String name;
    private CarCategory category;
    private int maxSpeed;
}
