package io.github.revNrun.revNrun.models.managers;

public interface Manager {
}
