package io.github.revNrun.revNrun.models.persistence;

public interface Repository {
}
