package io.github.revNrun.revNrun.view;

public interface InputHelper {
    boolean isKeyPressed(int keycode);
}
