package io.github.revNrun.revNrun.views;

import com.badlogic.gdx.graphics.Camera;
import com.badlogic.gdx.graphics.g2d.SpriteBatch;
import com.badlogic.gdx.utils.viewport.Viewport;

public class GamePlayView extends View {
    public GamePlayView(SpriteBatch batch, Viewport viewport, Camera camera) {
        super(batch, viewport, camera);
    }

    @Override
    public void render() {

    }
}
