package io.github.revNrun.revNrun.views;

import com.badlogic.gdx.graphics.Camera;
import com.badlogic.gdx.graphics.g2d.SpriteBatch;
import com.badlogic.gdx.utils.viewport.Viewport;

public class MainMenuView extends View {
    public MainMenuView(SpriteBatch batch, Viewport viewport, Camera camera) {
        super(batch, viewport, camera);
    }

    @Override
    public void render() {

    }
}
